Fix to stuck statistics

--- a/pages/assets/pg.css
+++ b/pages/assets/pg.css
@@ -119,3 +119,33 @@
     background: #00CA4C;
     color: #fff; }
 
+#video-link-icon {
+    border:1px solid white;
+    padding: 1.5rem 1.9rem;
+    color:white;
+    cursor: pointer;
+}
+#video-link-icon:hover {
+    color: black;
+    border-color: black;
+    background-color: white;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+.loading-spinner.active {
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    border: 0.25rem solid #919191;
+    border-top-color: black;
+    animation: spin 1s infinite linear;
+    display: inline-block;
+}
